Update page title for IT Life Work Design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#312e81">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>お見積りシミュレーター | くらしと仕事のITパートナー</title>
+  <title>お見積りシミュレーター | ITライフワークデザイン</title>
   <meta name="description" content="長崎県を中心に活動する訪問ITサポートの料金シミュレーター">
   
   <!-- PWA用マニフェスト -->
