--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
         let text = `━━━━━━━━━━━━━━━━━━━━
 　お見積書
-　くらしと仕事のITパートナー
+　ITライフワークデザイン
 ━━━━━━━━━━━━━━━━━━━━
 作成日: ${dateStr}
 
@@ -579,7 +579,7 @@
           <header className="bg-gradient-to-r from-indigo-900 to-indigo-800 text-white px-4 py-5 shadow-lg sticky top-0 z-50">
             <div className="max-w-lg mx-auto">
               <h1 className="text-lg font-bold tracking-wide text-center">
-                くらしと仕事のITパートナー
+                ITライフワークデザイン
               </h1>
               <p className="text-indigo-200 text-sm text-center mt-1">お見積りシミュレーター</p>
             </div>
